LAB | Natural language to SQL

--- a/lab_natural_language_to_sql.ipynb
+++ b/lab_natural_language_to_sql.ipynb
@@ -1534,6 +1534,50 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Report"
+      ],
+      "metadata": {
+        "id": "ELH6v7r1j7wP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Summary of Findings:\n",
+        "###What Worked Well:\n",
+        "1-Clear Instructions + Schema (Zero-Shot)\n",
+        "The model performed reliably when given detailed instructions and a clean schema, even without examples. It was able to generate syntactically correct and relevant SQL for straightforward questions.\n",
+        "\n",
+        "2-Few-Shot Prompts (Sample Style and OpenAI Style)\n",
+        "Few-shot examples significantly improved output quality, especially when question phrasing became more complex or when schema relationships weren’t obvious. The model mimicked the SQL formatting and logic style of the examples provided.\n",
+        "\n",
+        "3-OpenAI-style Prompts\n",
+        "Structured, chat-style prompts with examples closely matched the way GPT models are trained. These performed especially well, often generating clean, optimized queries that respected both logic and formatting.\n",
+        "\n",
+        "###What Didn’t Work Well:\n",
+        "\n",
+        "1-Typos or Unclear Prompts\n",
+        "The model is highly sensitive to clarity. Minor spelling errors in keywords or schema fields led to degraded results or no SQL at all. Compared to GPT-3.5, sqlcoder-7b is less forgiving with input mistakes.\n",
+        "\n",
+        "2-Incomplete or Inconsistent Prompts\n",
+        "When examples were inconsistent with the schema, the model would generate logically incorrect SQL — e.g., joining nonexistent tables or referencing the wrong field for filtering.\n",
+        "\n",
+        "###Key Takeaways:\n",
+        "1-Prompt engineering matters a lot for code generation tasks.\n",
+        "\n",
+        "2-Few-shot examples must be clean, relevant, and aligned with your schema — the model copies the style and logic of examples precisely.\n",
+        "\n",
+        "3-While smaller models like sqlcoder-7b are very capable, they need more explicit instructions than larger models like GPT-3.5.\n",
+        "\n",
+        "4-For multilingual support, some translation or pre-processing might be necessary before prompting a model like sqlcoder-7b."
+      ],
+      "metadata": {
+        "id": "wKrkYdsMkG8o"
+      }
     }
   ],
   "metadata": {
